ajout d'un test d'integration vérifiant la présence du from

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,5 +11,12 @@
     </head>
     <body>
         @content
+
+        <form name="quizz" method="post" action="" class="quizz">
+        	<input type="checkbox" /> <label>Fromage</label>
+        	<input type="checkbox" /> <label>Tomate</label>
+        	<input type="checkbox" /> <label>Steak</label>
+        </form>
+
     </body>
 </html>
