ajout de l'interface

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,13 @@
-@(message: String)
+@(toto: String)
 
-@main("Welcome to Play") {
+@main("Welcome to Burger quiz") {
+
+
+	<h1>@toto</h1>
+	
+
+
+
 
     
 
